--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MNlegion/The-Social-Experiment#readme",
   "dependencies": {
+    "express": "^4.18.1",
     "mongoose": "^6.4.3"
   }
 }
